<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_by_popularity"
        android:orderInCategory="1"
        android:title="@string/popular"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_by_rating"
        android:orderInCategory="2"
        android:title="@string/top_rated"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorites"
        android:orderInCategory="3"
        android:title="@string/favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_all_favorites"
        android:orderInCategory="4"
        android:title="@string/delete_all_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />
</menu>