<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. This project was submitted by Tarek Bohdima as part of the Android Developer Nanodegree At Udacity.
  ~ As part of Udacity Honor code, your submissions must be your own work, hence submitting this project as yours will cause you to break the Udacity Honor Code and the suspension of your account.
  ~ Me, the author of the project, allow you to check the code as a reference, but if you submit it, it's your own responsibility if you get expelled.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        tools:context=".DetailActivity">


        <ImageView
            android:id="@+id/imageview_backdrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/backdrop"
            android:cropToPadding="true"
            android:fitsSystemWindows="false"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageview_poster"
            android:layout_width="0dp"
            android:layout_height="185dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/description_movie_poster"
            app:layout_constraintBottom_toBottomOf="@+id/imageview_backdrop"
            app:layout_constraintDimensionRatio="w,400:576"
            app:layout_constraintStart_toStartOf="@+id/imageview_backdrop"
            app:layout_constraintTop_toBottomOf="@+id/imageview_backdrop" />

        <TextView
            android:id="@+id/original_title"
            style="@style/detail_text_large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxEms="15"
            app:layout_constraintBottom_toTopOf="@+id/release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/imageview_poster"
            app:layout_constraintTop_toBottomOf="@+id/imageview_backdrop"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:text="The movie with long name " />

        <TextView
            android:id="@+id/release_date"
            style="@style/detail_text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/user_rating"
            app:layout_constraintStart_toStartOf="@+id/original_title"
            app:layout_constraintTop_toBottomOf="@+id/original_title"
            tools:text="03/13/2020" />

        <TextView
            android:id="@+id/user_rating"
            style="@style/detail_text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="4dp"
            android:gravity="center_horizontal|fill"
            app:layout_constraintBottom_toBottomOf="@+id/imageview_poster"
            app:layout_constraintStart_toStartOf="@+id/release_date"
            app:layout_constraintTop_toBottomOf="@+id/release_date"
            tools:text="7.6" />

        <TextView
            android:id="@+id/synopsis_title"
            style="@style/detail_text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/overview"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageview_poster"
            app:layout_constraintTop_toBottomOf="@+id/imageview_poster" />

        <TextView
            android:id="@+id/synopsis_text"
            style="@style/detail_text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/synopsis_title"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_title"
            tools:text="@tools:sample/lorem/random" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:barrierDirection="right"
            app:constraint_referenced_ids="original_title,release_date,user_rating"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>